# Classic-Line-Editor

./: .gitignore  CMakeLists.txt  LineEditor.vcxproj  LineEditor.vcxproj.filters  README.md
LineEditor/: LineData.cpp  LineEditor.sln  LineEditor.vcxproj  LineEditor.vcxproj.filters  main.cpp
include/: CommandHandler.h  LineData.h
src/: CommandHandler.cpp  CommandHandler.h  FileHandler.cpp  FileHandler.h  LineData.cpp  LineData.h  main.cpp
tests/: TESTS_CommandHandler.cpp  TESTS_FileHandler.cpp  TESTS_LineData.cpp  doctest.h
